welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
Balin:2: error: Missing closing brace `}' assumed here
droite();droite();
^Balin:3: error: '(' expected but '{' found.
while       { if estSurBiscuit()  
            ^Balin:16: error: illegal start of simple expression
}
^