welcome.lessons.welcome.loopwhile.WhileMoria.scala.code
droite();droite();
while       { if estSurBiscuit()  



while (estSurBiscuit()==false) { avance()};
prendBiscuit();
while (estSurBiscuit() == false) { recule()};
avance();poseBiscuit();


